# VR-teleop

./: .gitignore  .gitmodules  README.md
telegrip/: README.md  calibrate_rebot.py  config.yaml  pyproject.toml  rebot_reference_poses.json  requirements-dev.txt  requirements.txt
telegrip/URDF/reBot_B601_DM/: rebot_b601_dm.urdf
telegrip/URDF/reBot_DevArm/: rebot_devarm.urdf  rebot_devarm_ik.urdf
telegrip/telegrip/: __init__.py  calibrate.py  config.py  control_loop.py  diagnose_rebot.py  main.py
telegrip/telegrip/core/: kinematics.py  rebot_kinematics.py  robot_interface.py  visualizer.py
telegrip/telegrip/driver/: __init__.py  calibrator.py  feetech_bus.py  rebot.py  so100.py
telegrip/telegrip/inputs/: base.py  vr_ws_server.py
telegrip/tests/: test_rebot_kinematics.py  test_rebot_pose_control.py
telegrip/web-ui/: index.html  interface.js  styles.css  vr_app.js
